pdf parsing added

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ uvicorn
 python-dotenv
 supabase
 spacy
+PyMuPDF
+python-multipart
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
